--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="w-full self-end px-4 lg:w-1/2">
                 <div class="relative mt-10 lg:mt-9 lg:right-0">
-                <img src="dist/image/raka.png" alt="raka-nugraha" class="max-w-full mx-auto">
+                <img src="dist/image/rakanugraha.png" alt="raka-nugraha" class="max-w-full mx-auto">
                 <span class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 scale-125">
                     <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                         <path fill="#14b8a6" d="M46.8,-54.4C61.5,-43.5,74.9,-29.5,76.6,-14.3C78.3,0.9,68.5,17.4,58.9,34.2C49.4,51,40.2,68.1,26.7,72.7C13.2,77.3,-4.5,69.4,-18.8,60.4C-33,51.4,-43.7,41.4,-51,29.2C-58.3,17,-62.3,2.7,-62.9,-14.1C-63.6,-30.9,-60.9,-50.1,-49.8,-61.7C-38.8,-73.2,-19.4,-77.1,-1.7,-75.1C16.1,-73.1,32.1,-65.3,46.8,-54.4Z" transform="translate(100 100) scale(1.0)" />
