--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Hi👋, i'm <span class="block font-bold text-dark text-4xl mt-1">Raka Nugraha</span></h1>
                 <h2 class="font-medium text-secondary mb-5 lg:text-2xl">Fullstack Web Developer & <span class="text-dark"> IT Staff</span></h2>
                 <p class="font-medium text-secondary mb-10 leading-relaxed">I have experience for working as IT staff atleast 3 years, and now i'm student at harisenin.com for <span class="text-dark font-bold">Fullstack Web Developer.</span></p>
-                <a href="#" text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-out">Contact me</a>
+                <a href="#" class="font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-out">Contact me</a>
             </div>
             <div class="w-full self-end px-4 lg:w-1/2">
                 <div class="relative mt-10 lg:mt-9 lg:right-0">
